--- a/Portforio/index-blog.html
+++ b/Portforio/index-blog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>TERUMI Portforio</title>
-	<link rel="stylesheet" type="text/css" href=css/style-top.css>
+	<link rel="stylesheet" type="text/css" href=css/style-blog.css>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/responsive-top.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
